--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,6 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.11"
+    "react-dom": "^16.5.2"
   }
 }
