--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,5 +2,6 @@ fastapi==0.88.0
 uvicorn==0.20.0
 python-multipart==0.0.6
 email-validator-1.3.1==1.3.1
+sqlalchemy==1.4.45
 python-jose[cryptography]
 passlib[bcrypt]
