--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.6",
     "eslint-webpack-plugin": "^4.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
