--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "eslint-webpack-plugin": "^4.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.10.0"
   }
 }
