--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,11 +33,13 @@
   "dependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-input-autosize": "^2.2.1",
     "axios": "^1.3.6",
     "eslint-webpack-plugin": "^4.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-hot-toast": "^2.4.0",
+    "react-input-autosize": "^3.0.0",
     "react-router-dom": "^6.10.0"
   }
 }
