--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,5 +3,9 @@ uvicorn==0.20.0
 python-multipart==0.0.6
 email-validator==1.3.1
 sqlalchemy==1.4.45
+pillow==9.5.0
+requests==2.28.2
+langchain==0.0.148
+openai==0.27.4
 python-jose[cryptography]
 passlib[bcrypt]
