--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,11 +31,15 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "@types/echarts": "^4.9.17",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-input-autosize": "^2.2.1",
     "antd": "^5.4.5",
     "axios": "^1.3.6",
+    "contribution-heatmap": "^1.4.1",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "eslint-webpack-plugin": "^4.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
