--- a/.env
+++ b/.env
@@ -2,19 +2,19 @@
 OPENAI_API_KEY = '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'
 
 # your stability api key
-API_HOST = 'https://api.stability.ai' 
+API_HOST = 'https://api.stability.ai'
 STABILITY_API_KEY = "sk-eAwLMN5A0w6Smlha3sBDULK5D6z5pWmzaujm1cnzmPTyNkNG"
 
 # your huggingface token
-HF_TOKEN = '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' 
+HF_TOKEN = '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'
 
 # your huggingface space, example: https://fazzie-pokemongai.hf.space/run/predict
 SPACE = "https://fazzie-pokemongai.hf.space/run/predict"
 SPACE_3D = "https://fazzie-timmahw-sd2-1-pokemon3d.hf.space/run/predict"
 
-# your huggingface model 
-MODEL = "https://api-inference.huggingface.co/models/Fazzie/PokemonGAI" 
-MODEL_3D = "https://api-inference.huggingface.co/models/Timmahw/SD2.1_Pokemon3D" 
+# your huggingface model
+MODEL = "https://api-inference.huggingface.co/models/Fazzie/PokemonGAI"
+MODEL_3D = "https://api-inference.huggingface.co/models/Timmahw/SD2.1_Pokemon3D"
 
 # PORT
 FRONTEND_PORT = 3000
@@ -22,3 +22,6 @@ BACKEND_PORT = 8000
 CHAT_PORT = 7680
 BATTLE_PORT = 7681
 
+# upload.io
+UPLOAD_ACCOUT = "FW25bFH"
+UPLOAD_TOKEN = 'Bearer public_FW25bFH8Wy9NKgAvHaTaZ47qRcpt'
