--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 numpy
-sqlalchemy
-pillow
-fastapi[all]
+sqlalchemy~=2.0.11
+pillow~=9.5.0
+fastapi[all]~=0.95.1
 openai
-langchain
-gradio
+langchain~=0.0.152
+gradio~=3.28.1
 python-jose
-passlib
+passlib~=1.7.4
 python-multipart
 email-validator
 bcrypt
 pre-commit
+requests~=2.29.0
+pydantic~=1.10.7
+uvicorn~=0.22.0
+python-dotenv~=1.0.0
